--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A website where students will learn easily",
   "main": "app.js",
   "scripts": {
-    "start": "vite"
+  
   },
   "repository": {
     "type": "git",
@@ -24,9 +24,7 @@
     "mongoose": "^5.12.14",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0",
-    "tailwind": "^4.0.0",
-    "vite": "^2.3.8"
+    "passport-local-mongoose": "^6.1.0"
   },
   "devDependencies": {},
   "keywords": []
